--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/thedeadman782004/Javascript-Getting-Started---Stephen-Burgos/issues"
   },
-  "homepage": "https://github.com/thedeadman782004/Javascript-Getting-Started---Stephen-Burgos#readme"
+  "homepage": "https://github.com/thedeadman782004/Javascript-Getting-Started---Stephen-Burgos#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  }
 }
